fixed z-index issue

--- a/src/component/navbar/_mobile.scss
+++ b/src/component/navbar/_mobile.scss
@@ -23,6 +23,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 2;
 }
 
 /* Position and sizing of burger button */
